fix vertical cell alignment (should be top, not center)

--- a/style.css
+++ b/style.css
@@ -12,3 +12,6 @@ pre {
 pre code {
   white-space: inherit;
 }
+
+/* Default table cell vertical alignment customisation  */
+.book .book-body .page-wrapper .page-inner section.normal table td, .book .book-body .page-wrapper .page-inner section.normal table th { vertical-align: top; }
